Add back in box styles, begin left side of character sheet

--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -131,7 +131,7 @@ div.sheet-outbreak-row div.sheet-spewlabel {
   font-weight: bold;
 }
 
-div.sheet-outbreak-row div.sheet-dicelabel {
+div.sheet-outbreak-row div.sheet-skilllabel {
   background-image: url("https://i.imgur.com/lPWJPdo.png");
   background-repeat: no-repeat;
   background-position: center top;
@@ -151,6 +151,58 @@ div.sheet-outbreak-row div.sheet-skillbox .sheet-skillname {
 
 div.sheet-outbreak-row div.sheet-skillbox .sheet-skillstat {
   width: 28px;
+}
+
+div.sheet-outbreak-row div.sheet-logo {
+  box-sizing: border-box;
+  border: 10px solid transparent;
+  -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
+  /*box-shadow: 3px 5px 2px #888888;*/
+  float: left;
+}
+
+div.sheet-outbreak-row div.sheet-spewbox,
+div.sheet-outbreak-row div.sheet-biobox,
+div.sheet-outbreak-row div.sheet-dicepoolbox,
+div.sheet-outbreak-row div.sheet-skills {
+  grid-auto-rows: min-content;
+  box-sizing: border-box;
+  border: 10px solid transparent;
+  -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
+  /*box-shadow: 3px 5px 2px #888888;*/
+  float: left;
+}
+
+div.sheet-outbreak-row div.sheet-spewbox img,
+div.sheet-outbreak-row div.sheet-biobox img,
+div.sheet-outbreak-row div.sheet-dicepoolbox img,
+div.sheet-outbreak-row div.sheet-skills img {
+  position: relative;
+  left: 6px;
+  top: 0px;
+  z-index: +1;
+  width: 40px;
+  height: 40px;
+}
+
+div.sheet-outbreak-row div.sheet-dicetypes {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+}
+
+div.sheet-outbreak-row div.sheet-dicelabel {
+  grid-auto-rows: min-content;
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+  height: 30px;
+}
+
+div.sheet-outbreak-row div.sheet-dicelabel .info {
+  font-size: 1.5em;
+  font-family: "Pictos";
 }
 
 /* ROLL TEMPLATE
