--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -6,6 +6,7 @@ input(name='attr_version' type='hidden' value='1')
 //- MIXINS
 include src/pug/_mixins.pug
 
+
 h1.logo
 .grid.outbreak-row
   .grid.box.navigation
@@ -24,7 +25,7 @@ h1.logo
       input(data-i18n-placeholder=val name='attr_character_'+attrName placeholder=val title='@{character_'+attrName+'}' type='text' value='')
 
   .grid.box.logo
-    img(alt='Outbreak Character Sheet', src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Logo_340pxWx90pxH.png')
+    img(alt='Outbreak Character Sheet', src='https://i.imgur.com/css0cBR.png')
 
 .grid.outbreak-row
   .grid.box.spewbox
@@ -41,10 +42,66 @@ h1.logo
       .grid.box.pointsbox
         span #{val} Points:
         input.points(type='text' name='attr_' + val +'points' title= val + 'points' value='0')
+
+  .grid.box.dicepoolbox
+    .grid.box.dicelabel
+      span.dicepool Dice Pool
+      span.info(title='Dice Pool will be used with all skill rolls. Set to Zero to clear.') i
+      p
+      span.rollpool
+      | Roll Pool
+      button(type='roll' name='roll_Pool' value='&{template:ou-small} {{Diff=@{dpDiff}}} {{Spd1=@{dpSpeed}}} {{Dmg=@{dpDmg}}} {{Deplet=@{dpDeplet}}} {{DieDif=@{DiffDie}}} {{DieSpd=@{SpeedDie}}} {{DieDmg=@{DmgDie}}} {{DieDep=@{DepletDie}}}')
+    .grid.box.dicetypes
+      img.dieimg(src='https://i.imgur.com/lum5jcz.jpg' title="Difficulty Dice - Diff dice don't show when rolling on a skill but they are calculated into the roll.")
+      select#diff(name='attr_dpDiff' style='width:45px')
+        option(value='[[0d6!p]]') 0
+        option(value='[[1d6!p]]') 1
+        option(value='[[2d6!p]]') 2
+        option(value='[[3d6!p]]') 3
+        option(value='[[4d6!p]]') 4
+        option(value='[[5d6!p]]') 5
+
+      img.dieimg(src='https://i.imgur.com/QIhFKV7.jpg' title='Speed Dice')
+      select#diff(name='attr_dpDiff' style='width:45px')
+        option(value='[[0d6!p]]') 0
+        option(value='[[1d6!p]]') 1
+        option(value='[[2d6!p]]') 2
+        option(value='[[3d6!p]]') 3
+        option(value='[[4d6!p]]') 4
+        option(value='[[5d6!p]]') 5
+
+      img.dieimg(src='https://i.imgur.com/EkBzVOm.jpg' title='Damage Dice')
+      select#diff(name='attr_dpDiff' style='width:45px')
+        option(value='[[0d6!p]]') 0
+        option(value='[[1d6!p]]') 1
+        option(value='[[2d6!p]]') 2
+        option(value='[[3d6!p]]') 3
+        option(value='[[4d6!p]]') 4
+        option(value='[[5d6!p]]') 5
+
+      img.dieimg(src='https://i.imgur.com/JyxTN3O.jpg' title='Depletion Dice')
+      select#diff(name='attr_dpDiff' style='width:45px')
+        option(value='[[0d6!p]]') 0
+        option(value='[[1d6!p]]') 1
+        option(value='[[2d6!p]]') 2
+        option(value='[[3d6!p]]') 3
+        option(value='[[4d6!p]]') 4
+        option(value='[[5d6!p]]') 5
+    .grid.box.dicetypes
+      each val in ['Difficulty', 'Speed', 'Damage', 'Depletion']
+        input(type='radio' name='attr_'+val+'Die' value='[[5d1]]' checked='checked')
+        span d5!
+        input(type='radio' name='attr_'+val+'Die' value='[[6d1]]')
+        span d6
+
+    .grid.box.other
+    .grid.box.other
+    .grid.box.other
+
       
 .grid.outbreak-row
-  .grid.box.dicebox
-    .grid.box.dicelabel Skills
+  .grid.box.skills
+    .grid.box.skilllabel Skills
       span Basic Skills
       each val in ['Balance', 'Brawl', 'Climb', 'Composure', 'Dodge', 'Endurance', 'Expression', 'Grapple', 'Hold', 'Jump/Leap', 'Lift/Pull', 'Resist Pain', 'Search', 'Spot/Listen', 'Stealth']
         - const attrName = val.toLowerCase();
