--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -133,7 +133,7 @@ div.sheet-outbreak-row {
     font-weight: bold;
   }
 
-  div.sheet-dicelabel {
+  div.sheet-skilllabel {
     background-image: url("https://i.imgur.com/lPWJPdo.png");
     background-repeat: no-repeat;
     background-position: center top;
@@ -152,6 +152,54 @@ div.sheet-outbreak-row {
     align-content: center;
     justify-content: space-evenly;
     button {
+    }
+  }
+
+  div.sheet-logo {
+    box-sizing: border-box;
+    border: 10px solid transparent;
+    -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
+    /*box-shadow: 3px 5px 2px #888888;*/
+    float: left;
+  }
+
+  div.sheet-spewbox,
+  div.sheet-biobox,
+  div.sheet-dicepoolbox,
+  div.sheet-skills {
+    grid-auto-rows: min-content;
+    box-sizing: border-box;
+    border: 10px solid transparent;
+    -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
+    /*box-shadow: 3px 5px 2px #888888;*/
+    float: left;
+    img {
+      position: relative;
+      left: 6px;
+      top: 0px;
+      z-index: +1;
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  div.sheet-dicetypes {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+  }
+
+  div.sheet-dicelabel {
+    grid-auto-rows: min-content;
+
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+    height: 30px;
+    .info {
+      font-size: 1.5em;
+      font-family: "Pictos";
     }
   }
 }
