Update grid to line up better, add more styling for columns

--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -100,6 +100,10 @@ div.sheet-outbreak-row div.sheet-pointsbox input.sheet-points {
   width: 26px;
 }
 
+div.sheet-outbreak-row div.sheet-attributebox {
+  grid-auto-rows: min-content;
+}
+
 div.sheet-outbreak-row div.sheet-attributebox img {
   width: 40px;
   height: 40px;
@@ -111,7 +115,6 @@ div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewbonus {
   text-align: center;
   width: 28px;
   font-size: 1.5em;
-  float: left;
 }
 
 div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewones {
@@ -120,10 +123,10 @@ div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewones {
   text-align: center;
   width: 28px;
   font-size: 1.5em;
-  float: right;
 }
 
 div.sheet-outbreak-row div.sheet-spewlabel {
+  grid-auto-rows: min-content;
   background-image: url("https://i.imgur.com/wgDarvp.png");
   background-repeat: no-repeat;
   background-position: center top;
@@ -187,6 +190,13 @@ div.sheet-outbreak-row div.sheet-skills img {
 
 div.sheet-outbreak-row div.sheet-dicetypes {
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  align-content: center;
+  justify-content: space-evenly;
+}
+
+div.sheet-outbreak-row div.sheet-points {
+  grid-template-columns: 1fr 1fr 1fr;
   display: flex;
   align-content: center;
   justify-content: space-evenly;
