--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -21,7 +21,7 @@ h1.logo
   .grid.box.biobox
     each val in ['Name', 'Player', 'Campaign']
       - const attrName = val.toLowerCase();
-      label(data-i18n-title=attrName title=attrName)
+      span #{val}
       input(data-i18n-placeholder=val name='attr_character_'+attrName placeholder=val title='@{character_'+attrName+'}' type='text' value='')
 
   .grid.box.logo
@@ -30,18 +30,21 @@ h1.logo
 .grid.outbreak-row
   .grid.box.spewbox
     .grid.box.spewlabel S.P.E.W. Attributes
-    each val in ['Strength', 'Perception', 'Empathy', 'Willpower']
-      .grid.box.attributebox
-        img(val=val, src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Attributes_' + val + '_40x40.png')
-        br
-        span #{val}
-        p
-          input.spewbonus(type='text' name='attr_' + val +'bonus' title= val + 'Bonus' value='0')
-          input.spewones(type='text' name='attr_' + val value='[[(@{#valBonus}*10)+@{val}]]')
-    each val in ['Survival', 'Competance', 'Gestalt']
-      .grid.box.pointsbox
-        span #{val} Points:
-        input.points(type='text' name='attr_' + val +'points' title= val + 'points' value='0')
+    .grid.box.dicetypes
+
+      each val in ['Strength', 'Perception', 'Empathy', 'Willpower']
+        .grid.box.attributebox
+          img(val=val, src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Attributes_' + val + '_40x40.png')
+          br
+          span #{val}
+          p
+            input.spewbonus(type='text' name='attr_' + val +'bonus' title= val + 'Bonus' value='0')
+            input.spewones(type='text' name='attr_' + val value='[[(@{#valBonus}*10)+@{val}]]')
+    .grid.box.points
+      each val in ['Survival', 'Competance', 'Gestalt']
+        .grid.box.pointsbox
+          span #{val} Points:
+          input.points(type='text' name='attr_' + val +'points' title= val + 'points' value='0')
 
   .grid.box.dicepoolbox
     .grid.box.dicelabel
@@ -93,11 +96,6 @@ h1.logo
         span d5!
         input(type='radio' name='attr_'+val+'Die' value='[[6d1]]')
         span d6
-
-    .grid.box.other
-    .grid.box.other
-    .grid.box.other
-
       
 .grid.outbreak-row
   .grid.box.skills
