--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -101,6 +101,7 @@ div.sheet-outbreak-row {
   }
 
   div.sheet-attributebox {
+    grid-auto-rows: min-content;
     img {
       width: 40px;
       height: 40px;
@@ -112,7 +113,6 @@ div.sheet-outbreak-row {
       text-align: center;
       width: 28px;
       font-size: 1.5em;
-      float: left;
     }
 
     input.sheet-spewones {
@@ -121,11 +121,12 @@ div.sheet-outbreak-row {
       text-align: center;
       width: 28px;
       font-size: 1.5em;
-      float: right;
     }
   }
 
   div.sheet-spewlabel {
+    grid-auto-rows: min-content;
+
     background-image: url("https://i.imgur.com/wgDarvp.png");
     background-repeat: no-repeat;
     background-position: center top;
@@ -185,6 +186,12 @@ div.sheet-outbreak-row {
 
   div.sheet-dicetypes {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+  }
+  div.sheet-points {
+    grid-template-columns: 1fr 1fr 1fr;
     display: flex;
     align-content: center;
     justify-content: space-evenly;
