added fixed momentum

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -742,10 +742,10 @@ input.sheet-border-bottom {
 }
 .sheet-rolltemplate-ironsworn table {
     width: 100%;
-	/*border: 1px solid;*/
+	border: 1px solid;
 	color: black;
 	font-size: 1em;
-    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-family: Verdana, arial, sans-serif;
     margin: 0px;
 }
 
@@ -765,22 +765,53 @@ input.sheet-border-bottom {
     color: #ffffff;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+    font-family: Verdana, arial, sans-serif;
     font-variant: small-caps;
     font-style: italic;
     font-weight: bold;
     text-align: left;
+    padding: 0.5rem 0.5rem 0.2rem 0.5rem;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-subfooter {
     background-color: #b9b9b6;
     line-height: 0.9em;
     font-size: 0.9em;
-    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+    font-family: Verdana, arial, sans-serif;
     font-variant: small-caps;
     font-style: italic;
     font-weight: bold;
     text-align: left;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-alert {
+    color: white;
+    background-color: firebrick;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-opportunity {
+    color: white;
+    background-color: #238023;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-strong-hit {
+    color: white;
+    background-color: darkgreen;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-weak-hit {
+    color: black;
+    background-color: gold;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-miss {
+    color: white;
+    background-color: #970d0e;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-complication {
+    color: white;
+    background-color: red;
 }
 
 .sheet-rolltemplate-ironsworn .userscript-tcat {
