--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -47,6 +47,8 @@
 
 .sheet-section-heading.sheet-combat-tools .sheet-header {
     font-size: 15px;
+    color: #fff;
+    background: #555;
 }
 
 /* -- Announcements -- */
@@ -1798,6 +1800,68 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     border-radius: 3px;
     font-weight: bold;
 }
+
+/* Combat Tools: Demolition */
+.sheet-demolition {
+    width: calc(100% - 140px - 0.8em);
+    padding-bottom: 5px;
+}
+
+.sheet-demolition .sheet-table .sheet-title {
+    background-color: #f0f0f0;
+}
+
+.sheet-demolition .sheet-table .sheet-title .sheet-cell {
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell {
+    padding: 0 5px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-row-title {
+    width: 75px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-select-box {
+    width: 122px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-text-box {
+    width: 140px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-input {
+    width: 55px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-six-d-spacer {
+    width: 10px;
+    padding: 0;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-damage {
+    width: 60px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-roll-damage {
+    width: 36px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-reset {
+    width: 60px;
+}
+
+.sheet-demolition .sheet-table .sheet-cell.sheet-reset button.sheet-reset {
+    height: 19px;
+    line-height: 19px;
+    color: white;
+    background: darkred;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
 
 /* Damage Resistance */
 .sheet-damage-reduction { float: right; width: 140px; }
