--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -112,13 +112,16 @@ hr {
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
-.sheet-page1tab, .sheet-page2tab {
+.sheet-page1tab,
+.sheet-page2tab,
+.sheet-page4tab {
     display: none;
 }
 
 
 input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
-input[type=radio].sheet-page2:checked ~ div.sheet-page2tab {
+input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
+input[type=radio].sheet-page4:checked ~ div.sheet-page4tab {
     display: block;
 }
 
