--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -1,38 +1,28 @@
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 .charsheet {
-  background-color: #eee;
+  background-color: #f9e0a8;
   padding: 1%;
-  width: 850px;
-}
+  min-width: 850px; }
 
 button:before {
-  display: none;
-}
+  display: none; }
 
 button[type="roll"] {
   background: #bbb;
-  border-radius: 0.1em;
-}
-
-button[type="roll"]:focus, button[type="roll"]:hover, button[type="roll"]:active {
-  background-color: #770709;
-}
-
-button[type="roll"]:focus > img, button[type="roll"]:hover > img, button[type="roll"]:active > img {
-  filter: invert(1);
-}
+  border-radius: 0.1em; }
+  button[type="roll"]:focus, button[type="roll"]:hover, button[type="roll"]:active {
+    background-color: #770709; }
+    button[type="roll"]:focus > img, button[type="roll"]:hover > img, button[type="roll"]:active > img {
+      filter: invert(1); }
 
 label {
   margin: 0px;
-  padding: 0px;
-}
+  padding: 0px; }
 
 input[type="text"] {
-  width: 100%;
-}
+  width: 100%; }
 
 textarea {
   font-size: 1.1em;
@@ -45,182 +35,180 @@ textarea {
   resize: vertical;
   text-align: left;
   vertical-align: top;
-  white-space: pre-line;
-}
-
-h1.sheet-logo {
-  padding-left: 30%;
-}
-
-div.sheet-box {
-  border: thin solid #bbb;
-  margin: 1%;
-  padding: 1%;
-  background-color: #fff;
-}
-
-div.sheet-box img {
-  width: 100%;
-}
+  white-space: pre-line; }
 
 div.sheet-grid {
   display: inline-grid;
-  grid-row-gap: 0.5em;
-}
+  grid-column-gap: 2%; }
 
-div.sheet-outbreak-row {
-  grid-template-columns: 1fr 1fr;
-  width: 100%;
-}
+div.sheet-navigation {
+  grid-template-columns: 1fr 1fr 1fr; }
+  div.sheet-navigation input {
+    cursor: pointer;
+    height: 20px;
+    opacity: 0;
+    width: 100%;
+    z-index: 2; }
+    div.sheet-navigation input + span {
+      background: #c7c3b0;
+      border-radius: 4px;
+      color: #000;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 0.8em;
+      font-weight: bold;
+      height: 20px;
+      text-align: center;
+      width: 100px;
+      margin-left: 2%;
+      padding: 2% 1%; }
+    div.sheet-navigation input:checked + span {
+      background-color: #dcdcdc;
+      border-bottom-color: #fff; }
+  div.sheet-navigation input:nth-of-type(1), div.sheet-navigation span:nth-of-type(1) {
+    grid-area: 1 / 1 / 1 / 1; }
+  div.sheet-navigation input:nth-of-type(2), div.sheet-navigation span:nth-of-type(2) {
+    grid-area: 1 / 2 / 1 / 2; }
+  div.sheet-navigation input:nth-of-type(3), div.sheet-navigation span:nth-of-type(3) {
+    grid-area: 1 / 3 / 1 / 3; }
 
-div.sheet-outbreak-row img.sheet-header {
+div.sheet-container {
+  display: inline-block;
+  background-color: #e6e6e6;
+  width: 100%; }
+  div.sheet-container div.sheet-main {
+    margin: 1%;
+    width: 98%; }
+    div.sheet-container div.sheet-main div.sheet-column {
+      display: inline-block;
+      vertical-align: top;
+      width: 48%; }
+      div.sheet-container div.sheet-main div.sheet-column:nth-of-type(1) {
+        margin-right: 2%; }
+      div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1 {
+        grid-auto-rows: min-content;
+        background-image: url("https://i.imgur.com/wgDarvp.png");
+        background-repeat: no-repeat;
+        background-position: center top;
+        text-align: center;
+        font-weight: bold; }
+
+img.sheet-header {
   height: 30px;
-  width: 200px;
-}
+  width: 200px; }
 
-div.sheet-outbreak-row div.sheet-biobox {
-  grid-template-columns: 8em 1fr;
-}
+div.sheet-biobox {
+  grid-template-columns: 8em 1fr; }
 
-div.sheet-outbreak-row div.sheet-navigation {
-  grid-template-columns: 8em 1fr;
+div.sheet-pointsbox {
   display: flex;
   align-content: center;
-  justify-content: space-evenly;
-}
+  justify-content: space-evenly; }
+  div.sheet-pointsbox input.sheet-points {
+    height: 24px;
+    width: 26px; }
 
-div.sheet-outbreak-row div.sheet-pointsbox {
-  display: flex;
-  align-content: center;
-  justify-content: space-evenly;
-}
+div.sheet-attributebox {
+  grid-auto-rows: min-content; }
+  div.sheet-attributebox img {
+    width: 40px;
+    height: 40px; }
+  div.sheet-attributebox input.sheet-spewbonus {
+    border: 2px solid #00b300;
+    font-weight: bold;
+    text-align: center;
+    width: 28px;
+    font-size: 1.5em; }
+  div.sheet-attributebox input.sheet-spewones {
+    border: 2px solid lightgrey;
+    font-weight: bold;
+    text-align: center;
+    width: 28px;
+    font-size: 1.5em; }
 
-div.sheet-outbreak-row div.sheet-pointsbox input.sheet-points {
-  height: 24px;
-  width: 26px;
-}
-
-div.sheet-outbreak-row div.sheet-attributebox {
-  grid-auto-rows: min-content;
-}
-
-div.sheet-outbreak-row div.sheet-attributebox img {
-  width: 40px;
-  height: 40px;
-}
-
-div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewbonus {
-  border: 2px solid #00b300;
-  font-weight: bold;
-  text-align: center;
-  width: 28px;
-  font-size: 1.5em;
-}
-
-div.sheet-outbreak-row div.sheet-attributebox input.sheet-spewones {
-  border: 2px solid lightgrey;
-  font-weight: bold;
-  text-align: center;
-  width: 28px;
-  font-size: 1.5em;
-}
-
-div.sheet-outbreak-row div.sheet-spewlabel {
-  grid-auto-rows: min-content;
-  background-image: url("https://i.imgur.com/wgDarvp.png");
-  background-repeat: no-repeat;
-  background-position: center top;
-  text-align: center;
-  font-weight: bold;
-}
-
-div.sheet-outbreak-row div.sheet-skilllabel {
+div.sheet-skilllabel {
   background-image: url("https://i.imgur.com/lPWJPdo.png");
   background-repeat: no-repeat;
   background-position: center top;
   text-align: center;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
-div.sheet-outbreak-row div.sheet-skillbox {
+div.sheet-skillbox {
   display: flex;
   align-content: center;
-  justify-content: space-evenly;
-}
+  justify-content: space-evenly; }
+  div.sheet-skillbox .sheet-skillname {
+    width: 110px; }
+  div.sheet-skillbox .sheet-skillstat {
+    width: 28px; }
 
-div.sheet-outbreak-row div.sheet-skillbox .sheet-skillname {
-  width: 110px;
-}
-
-div.sheet-outbreak-row div.sheet-skillbox .sheet-skillstat {
-  width: 28px;
-}
-
-div.sheet-outbreak-row div.sheet-logo {
+div.sheet-logo {
   box-sizing: border-box;
   border: 10px solid transparent;
   -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
   /*box-shadow: 3px 5px 2px #888888;*/
-  float: left;
-}
+  float: left; }
 
-div.sheet-outbreak-row div.sheet-spewbox,
-div.sheet-outbreak-row div.sheet-biobox,
-div.sheet-outbreak-row div.sheet-dicepoolbox,
-div.sheet-outbreak-row div.sheet-skills {
+div.sheet-spewbox,
+div.sheet-biobox,
+div.sheet-dicepoolbox,
+div.sheet-skills {
   grid-auto-rows: min-content;
   box-sizing: border-box;
   border: 10px solid transparent;
   -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
   /*box-shadow: 3px 5px 2px #888888;*/
-  float: left;
-}
+  float: left; }
+  div.sheet-spewbox img,
+  div.sheet-biobox img,
+  div.sheet-dicepoolbox img,
+  div.sheet-skills img {
+    position: relative;
+    left: 6px;
+    top: 0px;
+    z-index: +1;
+    width: 40px;
+    height: 40px; }
 
-div.sheet-outbreak-row div.sheet-spewbox img,
-div.sheet-outbreak-row div.sheet-biobox img,
-div.sheet-outbreak-row div.sheet-dicepoolbox img,
-div.sheet-outbreak-row div.sheet-skills img {
-  position: relative;
-  left: 6px;
-  top: 0px;
-  z-index: +1;
-  width: 40px;
-  height: 40px;
-}
-
-div.sheet-outbreak-row div.sheet-dicetypes {
+div.sheet-dicetypes {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   display: flex;
   align-content: center;
-  justify-content: space-evenly;
-}
+  justify-content: space-evenly; }
 
-div.sheet-outbreak-row div.sheet-points {
+div.sheet-points {
   grid-template-columns: 1fr 1fr 1fr;
   display: flex;
   align-content: center;
-  justify-content: space-evenly;
-}
+  justify-content: space-evenly; }
 
-div.sheet-outbreak-row div.sheet-dicelabel {
+div.sheet-dicelabel {
   grid-auto-rows: min-content;
   display: flex;
   align-content: center;
   justify-content: space-evenly;
-  height: 30px;
-}
+  height: 30px; }
+  div.sheet-dicelabel .info {
+    font-size: 1.5em;
+    font-family: "Pictos"; }
 
-div.sheet-outbreak-row div.sheet-dicelabel .info {
-  font-size: 1.5em;
-  font-family: "Pictos";
-}
+div.sheet-tab {
+  display: none; }
+
+input[name='attr_tab'][value='main'] ~ div.sheet-main {
+  display: inline-block; }
+
+input[name='attr_tab'][value='equipment'] ~ div.sheet-equipment {
+  display: inline-block; }
+
+input[name='attr_tab'][value='log'] ~ div.sheet-log {
+  display: inline-block; }
 
 /* ROLL TEMPLATE
 ============================= */
 .sheet-rolltemplate-rolls .sheet-template-body {
   border: 1px solid #000;
-  text-align: center;
-}
+  text-align: center; }
 
 .sheet-rolltemplate-rolls .sheet-template-header {
   background: #210000;
@@ -236,18 +224,15 @@ div.sheet-outbreak-row div.sheet-dicelabel .info {
   letter-spacing: 2px;
   padding: 5px;
   text-align: center;
-  text-transform: capitalize;
-}
+  text-transform: capitalize; }
 
 .sheet-rolltemplate-rolls .sheet-template-row {
   background-color: white;
-  padding: 5px;
-}
+  padding: 5px; }
 
 /* Use this to alternate the background colors for each row */
 .sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {
-  background-color: #1c1c1c;
-}
+  background-color: #1c1c1c; }
 
 /* Remove some fo the built in styles around rolls */
 .sheet-rolltemplate-rolls .inlinerollresult,
@@ -259,5 +244,4 @@ div.sheet-outbreak-row div.sheet-dicelabel .info {
   color: black;
   display: inline-block;
   font-size: 25px;
-  padding: 5px;
-}
+  padding: 5px; }
