--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -1,78 +1,88 @@
-* {
-  box-sizing: border-box;
+// COLORS
+//=============================
+  $gray: #bbb;
+  $white: #fff;
+
+// GLOBALS
+//=============================
+@import "src/scss/_global";
+
+div.sheet-grid {
+  display: inline-grid;
+  grid-column-gap: 2%;
 }
 
-.charsheet {
-  background-color: #eee;
-  padding: 1%;
-  width: 850px;
-}
+div.sheet-navigation {
+  grid-template-columns: 1fr 1fr 1fr;
 
-button:before {
-  display: none;
-}
+  input {
+    cursor: pointer;
+    height: 20px;
+    opacity: 0;
+    width: 100%;
+    z-index: 2;
 
-button[type="roll"] {
-  background: #bbb;
-  border-radius: 0.1em;
+    & + span {
+      background: #c7c3b0;
+      border-radius: 4px;
+      color: #000;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 0.8em;
+      font-weight: bold;
+      height: 20px;
+      text-align: center;
+      width: 100px;
+      margin-left: 2%;
+      padding: 2% 1%;
+    }
 
-  &:focus,
-  &:hover,
-  &:active {
-    background-color: #770709;
+    &:checked + span {
+      background-color: #dcdcdc;
+      border-bottom-color: $white;
+    }
+  }
 
-    & > img {
-      filter: invert(1);
+  input, span {
+    @for $i from 1 to 4 {
+      &:nth-of-type(#{$i}) { 
+        grid-area: 1 / #{$i} / 1 / #{$i};
+      }
     }
   }
 }
 
-label {
-  margin: 0px;
-  padding: 0px;
-}
-
-input[type="text"] {
+div.sheet-container {
+  display: inline-block;
+  background-color: #e6e6e6;
   width: 100%;
-}
 
-textarea {
-  font-size: 1.1em;
-  font-weight: normal;
-  line-height: 1.5em;
-  min-height: 150px;
-  overflow-wrap: break-word;
-  overflow: scroll;
-  padding: 2px;
-  resize: vertical;
-  text-align: left;
-  vertical-align: top;
-  white-space: pre-line;
-}
+  div.sheet-main {
+    margin: 1%;
+    width: 98%;
 
-h1.sheet-logo {
-  padding-left: 30%;
-}
+    div.sheet-column {
+      display: inline-block;
+      vertical-align: top;
+      width: 48%;
 
-div.sheet-box {
-  border: thin solid #bbb;
-  margin: 1%;
-  padding: 1%;
-  background-color: #fff;
+      &:nth-of-type(1) {
+        margin-right: 2%;
+      }
 
-  img {
-    width: 100%;
+      div.sheet-spewbox {
+        h1 {
+          grid-auto-rows: min-content;
+          background-image: url("https://i.imgur.com/wgDarvp.png");
+          background-repeat: no-repeat;
+          background-position: center top;
+          text-align: center;
+          font-weight: bold;
+        }
+      }
+    }
   }
 }
-
-div.sheet-grid {
-  display: inline-grid;
-  grid-row-gap: 0.5em;
-}
-
-div.sheet-outbreak-row {
-  grid-template-columns: 1fr 1fr;
-  width: 100%;
 
   img.sheet-header {
     height: 30px;
@@ -81,13 +91,6 @@ div.sheet-outbreak-row {
 
   div.sheet-biobox {
     grid-template-columns: 8em 1fr;
-  }
-
-  div.sheet-navigation {
-    grid-template-columns: 8em 1fr;
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
   }
 
   div.sheet-pointsbox {
@@ -122,16 +125,6 @@ div.sheet-outbreak-row {
       width: 28px;
       font-size: 1.5em;
     }
-  }
-
-  div.sheet-spewlabel {
-    grid-auto-rows: min-content;
-
-    background-image: url("https://i.imgur.com/wgDarvp.png");
-    background-repeat: no-repeat;
-    background-position: center top;
-    text-align: center;
-    font-weight: bold;
   }
 
   div.sheet-skilllabel {
@@ -209,7 +202,19 @@ div.sheet-outbreak-row {
       font-family: "Pictos";
     }
   }
+
+// HIDDEN SECTIONS
+//=============================
+div.sheet-tab {
+  display: none;
 }
+
+@each $value in 'main', 'equipment', 'log' {
+  input[name='attr_tab'][value='#{$value}'] ~ div.sheet-#{$value} {
+    display: inline-block;
+  }
+}
+
 
 // ROLL TEMPLATE
 //=============================
