--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -2,6 +2,7 @@
 //=============================
   $gray: #bbb;
   $white: #fff;
+  $green: #00b300;
 
 // GLOBALS
 //=============================
@@ -10,6 +11,8 @@
 div.sheet-grid {
   display: inline-grid;
   grid-column-gap: 2%;
+  align-content: center;
+  justify-content: space-evenly;
 }
 
 div.sheet-navigation {
@@ -57,6 +60,10 @@ div.sheet-container {
   background-color: #e6e6e6;
   width: 100%;
 
+  div {
+    width: 100%;
+  }
+
   div.sheet-main {
     margin: 1%;
     width: 98%;
@@ -64,20 +71,62 @@ div.sheet-container {
     div.sheet-column {
       display: inline-block;
       vertical-align: top;
-      width: 48%;
-
-      &:nth-of-type(1) {
-        margin-right: 2%;
-      }
+      width: 49%;
 
       div.sheet-spewbox {
+        grid-row-gap: 2%;
+
         h1 {
-          grid-auto-rows: min-content;
-          background-image: url("https://i.imgur.com/wgDarvp.png");
+          background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
           background-repeat: no-repeat;
           background-position: center top;
           text-align: center;
-          font-weight: bold;
+
+          &.sheet-green-header {
+            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
+          }
+
+          &.sheet-yellow-header {
+            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/yellowheader.png");
+          }
+        }
+
+        div.sheet-dicetypes {
+          grid-template-columns: 1fr 1fr 1fr 1fr;
+          text-align: center;
+
+          img {
+            padding: 1% 29%;
+            width: 100%;
+          }
+
+          div.sheet-attributes {
+            div.sheet-grid {
+              grid-template-columns: 1fr 1fr;
+              grid-column-gap: 2%;
+
+              input {
+                text-align: center;
+                border: 0.15em solid $gray;
+
+                &[name*='bonus'] {
+                  border-color: $green;
+                }
+              }
+            }
+          }
+        }
+
+        div.sheet-points {
+          grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr;
+
+          input {
+            text-align: center;
+          }
+        }
+
+        div.sheet-skills {
+
         }
       }
     }
@@ -159,35 +208,11 @@ div.sheet-container {
 
   div.sheet-spewbox,
   div.sheet-biobox,
-  div.sheet-dicepoolbox,
-  div.sheet-skills {
+  div.sheet-dicepoolbox {
     grid-auto-rows: min-content;
     box-sizing: border-box;
     border: 10px solid transparent;
     -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
-    /*box-shadow: 3px 5px 2px #888888;*/
-    float: left;
-    img {
-      position: relative;
-      left: 6px;
-      top: 0px;
-      z-index: +1;
-      width: 40px;
-      height: 40px;
-    }
-  }
-
-  div.sheet-dicetypes {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-  }
-  div.sheet-points {
-    grid-template-columns: 1fr 1fr 1fr;
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
   }
 
   div.sheet-dicelabel {
