--- a/Outbreak/src/scss/_global.scss
+++ b/Outbreak/src/scss/_global.scss
@@ -6,6 +6,7 @@
   background-color: #f9e0a8;
   padding: 1%;
   min-width: 850px;
+  font-family: "Courier New", Courier, monospace;
 }
 
 button:before {
@@ -25,6 +26,10 @@ button[type="roll"] {
       filter: invert(1);
     }
   }
+}
+
+h2 {
+  font-size: 1em;
 }
 
 label {
