--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -4,7 +4,8 @@
 .charsheet {
   background-color: #f9e0a8;
   padding: 1%;
-  min-width: 850px; }
+  min-width: 850px;
+  font-family: "Courier New", Courier, monospace; }
 
 button:before {
   display: none; }
@@ -16,6 +17,9 @@ button[type="roll"] {
     background-color: #770709; }
     button[type="roll"]:focus > img, button[type="roll"]:hover > img, button[type="roll"]:active > img {
       filter: invert(1); }
+
+h2 {
+  font-size: 1em; }
 
 label {
   margin: 0px;
@@ -39,7 +43,9 @@ textarea {
 
 div.sheet-grid {
   display: inline-grid;
-  grid-column-gap: 2%; }
+  grid-column-gap: 2%;
+  align-content: center;
+  justify-content: space-evenly; }
 
 div.sheet-navigation {
   grid-template-columns: 1fr 1fr 1fr; }
@@ -76,22 +82,44 @@ div.sheet-container {
   display: inline-block;
   background-color: #e6e6e6;
   width: 100%; }
+  div.sheet-container div {
+    width: 100%; }
   div.sheet-container div.sheet-main {
     margin: 1%;
     width: 98%; }
     div.sheet-container div.sheet-main div.sheet-column {
       display: inline-block;
       vertical-align: top;
-      width: 48%; }
-      div.sheet-container div.sheet-main div.sheet-column:nth-of-type(1) {
-        margin-right: 2%; }
-      div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1 {
-        grid-auto-rows: min-content;
-        background-image: url("https://i.imgur.com/wgDarvp.png");
-        background-repeat: no-repeat;
-        background-position: center top;
-        text-align: center;
-        font-weight: bold; }
+      width: 49%; }
+      div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox {
+        grid-row-gap: 2%; }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1 {
+          background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png");
+          background-repeat: no-repeat;
+          background-position: center top;
+          text-align: center; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1.sheet-green-header {
+            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/greenheader.png"); }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox h1.sheet-yellow-header {
+            background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/yellowheader.png"); }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes {
+          grid-template-columns: 1fr 1fr 1fr 1fr;
+          text-align: center; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes img {
+            padding: 1% 29%;
+            width: 100%; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid {
+            grid-template-columns: 1fr 1fr;
+            grid-column-gap: 2%; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid input {
+              text-align: center;
+              border: 0.15em solid #bbb; }
+              div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-dicetypes div.sheet-attributes div.sheet-grid input[name*='bonus'] {
+                border-color: #00b300; }
+        div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points {
+          grid-template-columns: 2fr 1fr 2fr 1fr 2fr 1fr; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-points input {
+            text-align: center; }
 
 img.sheet-header {
   height: 30px;
@@ -151,36 +179,11 @@ div.sheet-logo {
 
 div.sheet-spewbox,
 div.sheet-biobox,
-div.sheet-dicepoolbox,
-div.sheet-skills {
+div.sheet-dicepoolbox {
   grid-auto-rows: min-content;
   box-sizing: border-box;
   border: 10px solid transparent;
-  -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
-  /*box-shadow: 3px 5px 2px #888888;*/
-  float: left; }
-  div.sheet-spewbox img,
-  div.sheet-biobox img,
-  div.sheet-dicepoolbox img,
-  div.sheet-skills img {
-    position: relative;
-    left: 6px;
-    top: 0px;
-    z-index: +1;
-    width: 40px;
-    height: 40px; }
-
-div.sheet-dicetypes {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  display: flex;
-  align-content: center;
-  justify-content: space-evenly; }
-
-div.sheet-points {
-  grid-template-columns: 1fr 1fr 1fr;
-  display: flex;
-  align-content: center;
-  justify-content: space-evenly; }
+  -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat; }
 
 div.sheet-dicelabel {
   grid-auto-rows: min-content;
